# SuperteamIN-Alpenglow

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  Dockerfile.quick  Formal Verification Blueprint for Solana Alpenglow.md  LICENSE  PARSING_ISSUE_WORKAROUND.md  README.md  README_Docker.md  Reference.md  Solana Alpenglow White Paper v1.1.md  Solana_Alpenglow_Consensus.md  add_watermark.py  build_verification.sh  local_verification.sh  localverify.sh  quick_local_test.sh  run_build_diagnosis.sh  test_docker_verification.sh  test_simple.tla  test_verification.sh
.github/workflows/: nightly.yml  verify.yml
analysis/: coverage_report.py  gap_analysis.py  performance_optimizer.py
benchmarks/: performance.py  scalability.py  scalability_analysis.py
business/: Regulatory_Engagement_Plan.md  Series_A_Pitch_Deck.md
ci/: verify_all.yml
ci-cd/: README.md
ci-cd/monitoring/: monitor.pid  server.py  start-monitoring.sh
ci-cd/scripts/: configure-alerts.sh  full-regression-test.sh  parallel-verification.sh  setup-monitoring.sh
conformance/: README.md  trace-translator.py
conformance/scripts/: collect-implementation-traces.sh
cross-validation/: README.md
cross-validation/scripts/: performance-comparison.sh  run-dual-framework-tests.sh  trace-equivalence-check.sh
docs/: CLEANUP_PLAN.md  CrossValidationGuide.md  DevelopmentGuide.md  ImplementationGuide.md  ImplementationValidation.md  ProductionDeploymentGuide.md  ResearchPublicationDraft.md  StaterighGuide.md  StaterightGuide.md  TheoremVerificationReport.md  TroubleshootingGuide.md  UserGuide.md  VerificationDashboard.md  VerificationGuide.md  VerificationMapping.md  VerificationReport.md  WhitepaperMapping.md  WhitepaperTheoremVerificationPlan.md  create_verification_roadmap.py
examples/: smoke_test.rs
explorations/: FormalMethodsStrategy.md  RotorAnalysis.md  VotorAnalysis.md
implementation/: Cargo.toml  lib.rs  monitor.rs  production_monitor.rs  validation.rs
models/: AdaptiveTimeout.cfg  Adversarial.cfg  Boundary.cfg  CompleteAlpenglowTest.cfg  EconomicIncentives.tla  EdgeCase.cfg  EndToEnd.cfg  FastByzantineTest.cfg  LargeScale.cfg  LeaderWindow.cfg  LocalVerify.cfg  LocalVerify_working.cfg  Medium.cfg  NetworkTest.cfg  Partition.cfg  Performance.cfg  PerformanceTest.cfg  ResilienceTest.cfg  RotorPerformance.cfg  RotorSimpleTest.cfg  RotorTest.cfg  SafetyCoreTest.cfg  SafetyProofsTest.cfg  SamplingVerification.cfg  SimpleTest.cfg  SimpleVerify.cfg  Small.cfg  Small_fixed.cfg  Stress.cfg  TLC_Debug.cfg  Test.cfg  TestBasic.cfg  TestMinimal.cfg  TestSimple.cfg  TestSimplified.cfg  TestSmall.cfg  VRFSimple.cfg  VRFTest.cfg  Votor.cfg  VotorCore.cfg  (+3 more)
proofs/: Liveness.tla  Resilience.tla  Safety.tla  WhitepaperTheorems.tla  verify_theorem_correspondence.py
proofs/scripts/: complete_liveness_proofs.py  complete_safety_proofs.py  verify_theorem_correspondence.py
proofs/tlaps/: EconomicSafety.tla  MathHelpers.tla  Resilience.tla  Safety.tla  Sampling.tla  WhitepaperTheorems.tla
reports/: performance_analysis.json  verification_report.json  verification_report.md
reports/theorem_mapping/: theorem_mapping.html  theorem_mapping.json  theorem_mapping.md
results/: performance_lemmas_verification.json
results/proofs/: baseline_obligations.txt
results/verification_20250905_233655/: metadata.json
results/verification_20250905_233747/: metadata.json
results/verification_20250905_234120/: metadata.json
results/verification_20250905_234515/: metadata.json
results/verification_20250905_234620/: metadata.json
scripts/: automated_regression_testing.sh  automated_verification_tracking.py  benchmark_suite.sh  check_model.sh  clean.sh  debug_stateright_build.sh  fix_critical_issues.sh  generate_report.sh  generate_theorem_mapping.py  large_scale_verify.sh  monitor.sh  parallel_check.sh  production_validation_suite.sh  property_mapping.json  run_all.sh  run_complete_verification.sh  run_comprehensive_verification.sh  setup.sh  stateright_verify.sh  theorem_correspondence_validator.py  validate_current_status.sh  validate_specs.sh  verify_proofs.sh  verify_whitepaper_correspondence.sh  verify_whitepaper_theorems.sh
scripts/ci/: check_model.sh  parallel_check.sh  verify_proofs.sh
specs/: AdaptiveTimeouts.tla  AdvancedNetwork.tla  Alpenglow.tla  AlpenglowSimple.tla  AlpenglowSimple_TTrace_1757038122.tla  Alpenglow_TTrace_1757032344.tla  Alpenglow_TTrace_1757032500.tla  Alpenglow_TTrace_1757032561.tla  Alpenglow_TTrace_1757032603.tla  Alpenglow_TTrace_1757032621.tla  Alpenglow_TTrace_1757033170.tla  Alpenglow_TTrace_1757033233.tla  Alpenglow_TTrace_1757033265.tla  Crypto.tla  EconomicModel.tla  EconomicModelComplete.tla  Integration.tla  LivenessProperties.cfg  LivenessProperties.tla  Network.tla  NetworkIntegration.tla  PerformanceAnalysis.tla  Resilience.tla  ResilienceSimple.tla  Rotor.tla  RotorPerformanceProofs.tla  RotorSimple.tla  SafetyCore.tla  Sampling.tla  SimpleTest.tla  Stake.tla  StakeConfig.tla  StakeTest.tla  TestSimple.tla  TestTypes.tla  Timing.tla  Types.tla  TypesCore.tla  Utils.tla  VRF.tla  (+3 more)
stateright/: Cargo.toml
stateright/src/: alpenglow_model.rs  integration.rs  lib.rs  network.rs  rotor.rs  rotor_performance.rs  sampling.rs  stateright.rs  votor.rs
stateright/tests/: adaptive_timeouts.rs  byzantine_attack_scenarios.rs  byzantine_resilience.rs  coordinated_byzantine.rs  cross_pipeline.rs  cross_validation.rs  cross_validation_comprehensive.rs  economic_model.rs  integration_tests.rs  liveness_properties.rs  safety_properties.rs  sampling_verification.rs  votor_dual_path_test.rs  vrf_leader_selection.rs
stateright/tests/common/: mod.rs
submission/: CompleteSpecification.tla  ExecutiveSummary.md  FormalSpecificationPackage.md  ModelCheckingResults.md  ProvenTheorems.tla  README.md  ReproducibilityPackage.md  VerificationMetrics.json  WhitepaperCorrespondence.md  run_complete_verification.sh
tests/: README.md
theorem_mapping_reports/: mapping_statistics.json  theorem_mapping.csv  theorem_mapping.html  theorem_mapping.json  theorem_mapping.md
tools/: deployment_monitor.py
(+24 files in other folders)
