# Author: Ayush Srivastava
[package]
name = "alpenglow-validation"
version = "0.1.0"
edition = "2021"
authors = ["Alpenglow Team"]
description = "Validation and monitoring tools for Solana Alpenglow consensus protocol"
license = "MIT OR Apache-2.0"
repository = "https://github.com/solana-labs/alpenglow"
keywords = ["consensus", "blockchain", "validation", "monitoring", "solana"]
categories = ["cryptography", "simulation", "development-tools"]

[dependencies]
# Main stateright crate dependency (local workspace member)
alpenglow-stateright = { path = "../stateright" }

# External stateright for cross-validation
stateright = "0.30"

# Async runtime for validation tools
tokio = { version = "1.0", features = ["full"] }
tokio-util = "0.7"

# Serialization for data exchange with main crate
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bincode = "1.3"

# Logging and diagnostics
tracing = { version = "0.1", optional = true }
tracing-subscriber = { version = "0.3", features = ["env-filter"], optional = true }

# Error handling
thiserror = "1.0"
anyhow = "1.0"

# Async utilities
futures = "0.3"
async-trait = "0.1"

# Data structures for validation state
indexmap = "2.0"
dashmap = "5.5"

# Time handling for validation timing
chrono = { version = "0.4.31", features = ["serde"] }

# Configuration management
config = "0.14"
toml = "0.8"

# Statistical analysis for validation metrics
statrs = "0.16"

# Property-based testing for validation
proptest = "1.4"

# Performance monitoring
criterion = { version = "0.5", optional = true }

# Parallel processing for large-scale validation - disabled for compatibility
# rayon = { version = "=1.5.3", optional = true }

[dev-dependencies]
tokio-test = "0.4"
tempfile = "3.8"
env_logger = "0.10"

[features]
default = ["tracing", "tracing-subscriber"]

# Enable benchmarking support for validation tools
benchmarks = ["criterion"]

# Enable large-scale validation (parallel processing) - disabled for compatibility
# large-scale = ["rayon"]

# Enable runtime monitoring capabilities
runtime-monitoring = []

# Enable offline validation tools
offline-validation = []

# Enable cross-validation with TLA+ specifications
cross-validation = []

# Enable performance profiling for validation tools
profiling = ["criterion"]

# Enable all validation features
full-validation = [
    "runtime-monitoring",
    "offline-validation", 
    "cross-validation"
]

[lib]
name = "alpenglow_validation"
path = "lib.rs"

[profile.release]
# Optimize for validation performance
opt-level = 3
lto = true
codegen-units = 1

[profile.dev]
# Fast compilation for development
opt-level = 0
debug = true

[profile.test]
# Balanced profile for testing validation tools
opt-level = 1
debug = true

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

# Validation tool configuration metadata
[package.metadata.validation]
# Types of validation supported
validation-types = [
    "safety-properties",
    "liveness-properties", 
    "performance-metrics",
    "cross-validation"
]

# Monitoring capabilities
monitoring-features = [
    "runtime-alerts",
    "performance-tracking",
    "consensus-health",
    "network-diagnostics"
]